--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					</li>
 				</ul>
 				<!-- Zone de recherche linéaire décalée sur la droite -->
-				<form class="navbar-form navbar-right inline-form">
+				<form class="navbar-form navbar-right form-inline">
 					<div class="form-group">
 							<!-- barre de recherche -->
 						<input type="search" class="input-sm form-control Taille-controle" placeholder="Recherche">
