--- a/pages/angle-terre.html
+++ b/pages/angle-terre.html
@@ -42,19 +42,21 @@
 			</div>
 		</nav>
 		<div id="background_opacity">
+		</div>
 			<!--Contenu de la page -->
 			<div class="container page">
-				<article class="col-lg-7 col-sm-7 col-xs-7">
-					<h1>Petit zoom sur l'Angleterre</h1>
+				<article class="col-lg-7 col-sm-7 col-xs-12">
+					<h2>Petit zoom sur l'Angleterre</h2>
 					<p> Nation constitutive du Royaume-Uni. Elle est bordée par l'Écosse au nord et le pays de Galles à l'ouest. Son littoral est entouré par la mer du Nord à l'est, la mer d'Irlande au nord-ouest, la mer Celtique au sud-ouest, et la Manche au sud qui la sépare de l'Europe continentale. Son territoire couvre la majorité du centre et du sud de l'île de Grande-Bretagne, et il inclut également une centaine de petites îles.</p>
 					<p>L’apprentissage et l’enseignement de l’anglais est une activité économique importante pour l'Angleterre, et implique l’existence d’écoles de langue, de voyages linguistiques ou encore de publications à la portée internationale. Il n’y a pas de loi au niveau du Royaume-Uni qui reconnaît une langue officielle en Angleterre, mais l’anglais est la seule langue utilisée par l'ultra majorité des Anglais. En dépit de la relative petite taille de la nation anglaise, il y a de nombreux accents régionaux distincts, et des personnes avec un accent particulièrement prononcé peuvent ne pas être facilement comprises dans toute l'Angleterre.</p>
 					<p>La musique traditionnelle britannique a inspiré plusieurs genres musicaux, parmi lesquels les chants de marins, les gigues, les hornpipes, et des danses traditionnelles. </p>
 				</article>
-				<aside class="col-lg-offset-1 col-lg-4 col-sm-5 col-xs-5 ">
+				<br>
+				<aside class="col-lg-offset-1 col-lg-4 col-sm-5 col-xs-12 ">
 					<img class="col-lg-12 col-sm-12 col-xs-12 imageRonde" src="../images/england.png">
 				</aside>
 
-				<div class="col-lg-12 col-sm-12 col-xs-12"><br/></div>
+				<div class="col-lg-12 col-sm-12 col-xs-12"><br></div>
 				<div class="conteneur col-lg-offset-1 col-lg-5 col-sm-12 col-xs-12">
 					<div class="element">
 						<a type="button" class="btn btn-blue btn-sm" href="celtique.html">Retour</a>
@@ -64,7 +66,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 
 		<!-- Pied de page bleu foncé fixé en bas d'écran -->
 		<footer>
