--- a/pages/ecosse.html
+++ b/pages/ecosse.html
@@ -41,16 +41,16 @@
 				</div>
 			</div>
 		</nav>
-		<div id="background_opacity">
+		<div id="background_opacity"></div> <!--masque blanc pour le fond de la page -->
 			<!--Contenu de la page -->
 			<div class="container page">
-				<article class="col-lg-7 col-sm-7 col-xs-7">
-					<h1>Petit zoom sur l'Ecosse</h1>
+				<article class="col-lg-7 col-sm-7 col-xs-12">
+					<h2>Petit zoom sur l'Ecosse</h2>
 					<p>Une des quatre nations constitutives du Royaume-Uni, occupant le nord de la Grande-Bretagne, et comprenant également un ensemble d'archipels parmi lesquels les Hébrides, les Orcades ou les Shetland.</p>
 					<p>L'anglais et le gaélique écossais sont les deux langues officielles de l'Écosse. L'anglais écossais est la variété régionale de l'anglais en usage, appelée "Scottish English". C'est la langue écrite usuelle dans les textes non littéraires. Ne pas la confondre avec le scots, langue germanique très proche mais distincte de l'anglais moderne, qui est une autre langue minoritaire reconnue dans ce pays. L'écossais (Gaélique écossais appelé Gàidhlig, à comparer avec le Gaeilge parlé en Irlande) est une langue celtique parlée en Écosse, dans les Highlands, les îles, ainsi qu'en Nouvelle-Écosse. L'expulsion forcée de paysans écossais par des grands propriétaires terriens au XIXe siècle explique que la langue est trouvé jusqu'au Canada (galéique canadien).</p>
 					<p>La musique traditionnelle écossaise est rattachée aux musiques celtiques ; elle est en effet restée proche de la musique irlandaise, avec laquelle elle partage des instruments dont: la clàrsach (harpe celtique). La cornemuse est plus récente. </p>
 				</article>
-				<aside class="col-lg-offset-1 col-lg-4 col-sm-5 col-xs-5 ">
+				<aside class="col-lg-offset-1 col-lg-4 col-sm-5 col-xs-12 ">
 					<img class="col-lg-12 col-sm-12 col-xs-12 imageRonde" src="../images/scotland.png">
 				</aside>
 
