--- a/pages/irlande.html
+++ b/pages/irlande.html
@@ -41,16 +41,16 @@
 				</div>
 			</div>
 		</nav>
-		<div id="background_opacity">
+		<div id="background_opacity"></div> <!--masque blanc pour le fond de la page -->
 			<!--Contenu de la page -->
 			<div class="container page">
-				<article class="col-lg-6 col-sm-12 col-xs-12">
-					<h1>Petit zoom sur l'Irlande</h1>
+				<article class="col-lg-6 col-sm-7 col-xs-12">
+					<h2>Petit zoom sur l'Irlande</h2>
 					<p> Pays d'Europe de l'Ouest occupant la majeure partie de l'île d'Irlande dans l'océan Atlantique nord. Elle occupe 26 des 32 comtés traditionnels, les six autres formant l'Irlande du Nord, l'une des quatre nations constitutives du Royaume-Uni.</p>
 					<p>Dans la vie de tous les jours les Irlandais parlent anglais. Mais une autre langue a un statut officiel : le gaélique irlandais (souvent simplement appelé “irlandais”), la langue ancestrale de l’Irlande. L’irlandais fait partie de la branche gaélique des langues celtiques, qui comprend également l’écossais ou le manxois (parlé sur l’île de Man), l’autre branche, le brittonique, comprenant entre autres le gallois et le breton. Si aujourd’hui il n’est plus parlé que par une minorité de la population, le gaélique irlandais n’en demeure pas moins un élément essentiel de la culture irlandaise et bénéficie à ce titre de mesures de protection. Le gaélique irlandais est d’ailleurs considéré comme première langue officielle de la République d’Irlande.</p>
 					<p>La musique irlandaise se distingue par la variété des instruments utilisés, qui comptent notamment la harpe celtique, l'accordéon diatonique, les différentes flûtes locales, les uillean pipes, le fiddle ou le bodhran.</p>
 				</article>
-				<aside class="col-lg-offset-1 col-lg-5 col-sm-12 col-xs-12 ">
+				<aside class="col-lg-offset-1 col-lg-5 col-sm-5 col-xs-12 ">
 					<img class="col-lg-12 col-sm-12 col-xs-12 imageRonde" src="../images/ireland.png">
 				</aside>
 
@@ -64,7 +64,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 
 
 		<!-- Pied de page bleu foncé fixé en bas d'écran -->
