--- a/pages/wales.html
+++ b/pages/wales.html
@@ -41,16 +41,16 @@
 				</div>
 			</div>
 		</nav>
-		<div id="background_opacity">
+		<div id="background_opacity"></div> <!--masque blanc pour le fond de la page -->
 			<!--Contenu de la page -->
 			<div class="container page">
-				<article class="col-lg-7 col-sm-7 col-xs-7">
+				<article class="col-lg-7 col-sm-7 col-xs-12">
 					<h1>Qui connaissait le Pays de Galles?</h1>
 					<p>Nation constitutive du Royaume-Uni située dans l'Ouest de l'île de Grande-Bretagne. Il partage une frontière avec l'Angleterre à l'est et est bordé par la mer d'Irlande au nord.</p>
 					<p>La première langue parlée aujourd'hui est l'anglais. La deuxième langue est le gallois, langue historique du Pays de Galles, de la famille des langues celtique et proche parente du breton continental. Depuis 1993, une loi reconnait l'égalité entre les deux langues. Aujourd'hui, le gallois est, après l'irlandais, la première langue celtique parlée au monde, avec plus de 580 000 locuteurs recensés au pays de Galles9 et 133 000 en Angleterre. Il existe une chaîne de télévision qui émet exclusivement dans cette langue (S4C), une station de radio nationale (BBC Radio Cymru), et d'autres stations locales diffusent régulièrement des émissions en gallois. Tous les panneaux indicateurs sont libellés à la fois en anglais et en gallois.</p>
 					<p>Le pays de Galles est réputé pour le nombre et la qualité de ses chorales et fanfares. La musique traditionnelle est aussi en pleine renaissance.</p>
 				</article>
-				<aside class="col-lg-offset-1 col-lg-4 col-sm-5 col-xs-5 ">
+				<aside class="col-lg-offset-1 col-lg-4 col-sm-5 col-xs-12 ">
 					<img class="col-lg-12 col-sm-12 col-xs-12 imageRonde" src="../images/wales.png">
 				</aside>
 
@@ -64,7 +64,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 
 		<!-- Pied de page bleu foncé fixé en bas d'écran -->
 		<footer>
