--- a/pages/jazz.html
+++ b/pages/jazz.html
@@ -80,8 +80,8 @@
 			</center>
 			<div class="alert alert-success">En attendant un véritable article sur le sujet, voici un super projet que nous avons trouvé juste pour vous, chers lecteurs. Un produit ciblé pour votre tranche d'âge et votre niveau musical, que demande le peuple (si ce n'est un peu plus de respect et moins de condescendance de notre part)?</div>
 			<div class="col-lg-12 col-sm-12 col-xs-12">
-				<img src="../images/JAZZOOpackshot.png" alt="super publicité commerciale!" class=" col-lg-offset-1 col-lg-4 col-sm-3 col-xs-3"/>
-				<div class="col-sm-offset-1 col-xs-offset-1 col-lg-5 col-sm-7 col-xs-7">
+				<img src="../images/JAZZOOpackshot.png" alt="super publicité commerciale!" class=" col-lg-offset-1 col-lg-4 col-sm-3 col-xs-12"/>
+				<div class="col-lg-offset-1 col-lg-5 col-sm-7 col-xs-12">
 					<p>
 						Destiné à faire découvrir le monde du jazz aux enfants, JAZZOO plonge son auditeur dans l’univers des animaux, au travers d’histoires miniatures.
 						Par une interprétation musicale originale, drôle, poétique, groovy, funky et « sans paroles », le quintet suédois ODDJOB illustre avec humour, virtuosité et créativité, les péripéties, les émotions et les rêveries de ce nouveau bestiaire coloré.
