--- a/pages/melanges.html
+++ b/pages/melanges.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
    <head>
 		<meta charset="UTF-8"/>
@@ -85,70 +85,72 @@
 				La fusion de genres musicaux se définit par le mélange ou la combinaison de deux ou plusieurs genres musicaux afin d'en former un nouveau, qui devient automatiquement un sous-genre pour chacun des genres dont il est formé. Ce sous-genre s'approprie le plus souvent des noms des deux genres d'origine accolés ou parfois reliés par un trait d'union. Il peut également être un mot-valise (par exemple la merenhouse est un mélange de merengue et de house, ou le salsaton mixant salsa et reggaeton). La fusion de genres musicaux est de nature synthétique ou électronique, et permet à différents styles de musique électronique d'être joué en même temps lors de mixsets, notamment. La fusion recouvre une large variété de musiques alternatives incluant tango alternatif, blues, soul, disco, jazz, pop, electronica lyrique ou rythmique, ou autres genres rythmiques et dansants. Grâce à cette manière de jouer, les disc-jockeys peuvent fusionner et mélanger à leur guise différents styles musicaux selon leurs goûts.
 				</div>
 			</div>
-			<br/>		
+			<br>		
 			<div class="alert alert-success"><center>Survolez une image avec votre souris</center></div>
-			<br/>
+			<br>
 			<div id="mel-scroll-container">
-				<div class="mel-scroll-help">
-					<div id="mel1" class="mel-scroll">
-						<img src="../images/thumbnail_jazz_fusion.png">
-						<div class="mel-scroll-content">Le jazz fusion ou jazz-rock, est un courant musical lancé vers 1970, mêlant des éléments extraits du jazz avec d'autres courants musicaux comme le rock et le funk. Il a permis d'élargir considérablement le public du jazz, qui s'était beaucoup réduit avec le free jazz, et a généré de nombreux succès commerciaux. Le mouvement est surtout marqué, entre autres, par Miles Davis, John McLaughlin, Stanley Clarke et Herbie Hancock.</div>
+				<div id="mel-scroll-mobile">
+					<div class="mel-scroll-help">
+						<div id="mel1" class="mel-scroll">
+							<img src="../images/thumbnail_jazz_fusion.png">
+							<div class="mel-scroll-content">Le jazz fusion ou jazz-rock, est un courant musical lancé vers 1970, mêlant des éléments extraits du jazz avec d'autres courants musicaux comme le rock et le funk. Il a permis d'élargir considérablement le public du jazz, qui s'était beaucoup réduit avec le free jazz, et a généré de nombreux succès commerciaux. Le mouvement est surtout marqué, entre autres, par Miles Davis, John McLaughlin, Stanley Clarke et Herbie Hancock.</div>
+						</div>
 					</div>
-				</div>
-				<div class="mel-scroll-help">
-					<div id="mel2" class="mel-scroll">
-						<img src="../images/thumbnail_bossa_nova.png">
-						<div class="mel-scroll-content">La bossa nova est un genre musical ayant émergé à la fin des années 1950 au Brésil. Issu du croisement de la samba et du cool jazz, la bossa nova se popularise significativement dans les années 1960 chez les jeunes musiciens et étudiants. Le style bossa nova est inventé par un groupe composé du compositeur Antônio Carlos Jobim, du chanteur João Gilberto, du poète Vinícius de Moraes et d'autres qui inspireront à la fin des années 1950 une partie de la jeunesse des quartiers d'Ipanema et de Copacabana à Rio de Janeiro.</div>
+					<div class="mel-scroll-help">
+						<div id="mel2" class="mel-scroll">
+							<img src="../images/thumbnail_bossa_nova.png">
+							<div class="mel-scroll-content">La bossa nova est un genre musical ayant émergé à la fin des années 1950 au Brésil. Issu du croisement de la samba et du cool jazz, la bossa nova se popularise significativement dans les années 1960 chez les jeunes musiciens et étudiants. Le style bossa nova est inventé par un groupe composé du compositeur Antônio Carlos Jobim, du chanteur João Gilberto, du poète Vinícius de Moraes et d'autres qui inspireront à la fin des années 1950 une partie de la jeunesse des quartiers d'Ipanema et de Copacabana à Rio de Janeiro.</div>
+						</div>
 					</div>
-				</div>
-				<div class="mel-scroll-help">
-					<div id="mel3" class="mel-scroll">
-						<img src="../images/thumbnail_punk_celtique.png">
-						<div class="mel-scroll-content">Le punk celtique est un genre musical mêlant punk rock et musique celtique traditionnelle. Le genre se popularise dans les années 1980 grâce aux Pogues, un groupe punk originaire de Londres célébrant leur héritage irlandais. Les groupes de punk celtique reprennent souvent des chansons traditionnelles ou politiques irlandaises et écossaises. Les thèmes typiques du punk celtique impliquent la politique, la culture, la religion, l'alcool et la fierté de la classe ouvrière.</div>
+					<div class="mel-scroll-help">
+						<div id="mel3" class="mel-scroll">
+							<img src="../images/thumbnail_punk_celtique.png">
+							<div class="mel-scroll-content">Le punk celtique est un genre musical mêlant punk rock et musique celtique traditionnelle. Le genre se popularise dans les années 1980 grâce aux Pogues, un groupe punk originaire de Londres célébrant leur héritage irlandais. Les groupes de punk celtique reprennent souvent des chansons traditionnelles ou politiques irlandaises et écossaises. Les thèmes typiques du punk celtique impliquent la politique, la culture, la religion, l'alcool et la fierté de la classe ouvrière.</div>
+						</div>
 					</div>
-				</div>
-				<div class="mel-scroll-help">
-					<div id="mel4" class="mel-scroll">
-						<img src="../images/thumbnail_metal_symphonique.png">
-						<div class="mel-scroll-content">Le metal symphonique se caractérise par une alliance entre des structures de heavy metal et des arrangements orchestraux de musique classique. Les groupes de metal symphonique reprennent les bases d'une forme de heavy metal pour les associer à des instrumentations réelles ou samplées rappelant plus ou moins, la musique orchestrale. Le terme « symphonique » est ici une description informelle car beaucoup de groupes ne s'appuient pas réellement sur des structures proprement symphoniques.</div>
+					<div class="mel-scroll-help">
+						<div id="mel4" class="mel-scroll">
+							<img src="../images/thumbnail_metal_symphonique.png">
+							<div class="mel-scroll-content">Le metal symphonique se caractérise par une alliance entre des structures de heavy metal et des arrangements orchestraux de musique classique. Les groupes de metal symphonique reprennent les bases d'une forme de heavy metal pour les associer à des instrumentations réelles ou samplées rappelant plus ou moins, la musique orchestrale. Le terme « symphonique » est ici une description informelle car beaucoup de groupes ne s'appuient pas réellement sur des structures proprement symphoniques.</div>
+						</div>
 					</div>
-				</div>
-				<div class="mel-scroll-help">
-					<div id="mel5" class="mel-scroll">
-						<img src="../images/thumbnail_dubstep.png">
-						<div class="mel-scroll-content">Le dubstep est un genre de musique électronique, originaire pour sa plus grande partie du Sud de Londres, à Croydon. Il émerge à la fin des années 1990 et se développe grâce à de nombreux styles musicaux connexes tels que le 2-step garage, broken beat, drum and bass, jungle, dub et reggae. Au Royaume-Uni, les origines du genre peuvent être retracées lors de l'émergence du sound system jamaïquain au début des années 1980. La musique se caractérise par un rythme syncopé et une ligne de percussions accompagnée de basses, dites en anglais Bassline.</div>
+					<div class="mel-scroll-help">
+						<div id="mel5" class="mel-scroll">
+							<img src="../images/thumbnail_dubstep.png">
+							<div class="mel-scroll-content">Le dubstep est un genre de musique électronique, originaire pour sa plus grande partie du Sud de Londres, à Croydon. Il émerge à la fin des années 1990 et se développe grâce à de nombreux styles musicaux connexes tels que le 2-step garage, broken beat, drum and bass, jungle, dub et reggae. Au Royaume-Uni, les origines du genre peuvent être retracées lors de l'émergence du sound system jamaïquain au début des années 1980. La musique se caractérise par un rythme syncopé et une ligne de percussions accompagnée de basses, dites en anglais Bassline.</div>
+						</div>
 					</div>
-				</div>
-				<div class="mel-scroll-help">
-					<div id="mel6" class="mel-scroll">
-						<img src="../images/thumbnail_kawaii_metal.png">
-						<div class="mel-scroll-content">Le kawaii metal est un genre musical mélangeant des éléments du heavy metal et de la J-pop. Il est né au Japon au début des années 2010. Une composition de kawaii metal combine une instrumentation trouvée dans différents types de musique heavy metal avec des mélodies de J-pop ainsi qu'une présentation semblable à celle d'idole Japonaise. Les paroles du kawaii metal traitent de sujets souvent moins hostiles que les autres genres de heavy metal.</div>
+					<div class="mel-scroll-help">
+						<div id="mel6" class="mel-scroll">
+							<img src="../images/thumbnail_kawaii_metal.png">
+							<div class="mel-scroll-content">Le kawaii metal est un genre musical mélangeant des éléments du heavy metal et de la J-pop. Il est né au Japon au début des années 2010. Une composition de kawaii metal combine une instrumentation trouvée dans différents types de musique heavy metal avec des mélodies de J-pop ainsi qu'une présentation semblable à celle d'idole Japonaise. Les paroles du kawaii metal traitent de sujets souvent moins hostiles que les autres genres de heavy metal.</div>
+						</div>
 					</div>
+					<!-- <div class="mel-scroll-help"><div id="mel7" class="mel-scroll"><img src="#"><div class="mel-scroll-content">texte</div></div></div> -->
+					<!-- <div class="mel-scroll-help"><div id="mel8" class="mel-scroll"><img src="#"><div class="mel-scroll-content">texte</div></div></div> -->
+					
+					<!-- clones -->
+					<div class="mel-scroll-help">
+						<div id="mel1b" class="mel-scroll"></div>
+					</div>
+					<div class="mel-scroll-help">
+						<div id="mel2b" class="mel-scroll"></div>
+					</div>
+					<div class="mel-scroll-help">
+						<div id="mel3b" class="mel-scroll"></div>
+					</div>
+					<div class="mel-scroll-help">
+						<div id="mel4b" class="mel-scroll"></div>
+					</div>
+					<div class="mel-scroll-help">
+						<div id="mel5b" class="mel-scroll"></div>
+					</div>
+					<div class="mel-scroll-help">
+						<div id="mel6b" class="mel-scroll"></div>
+					</div>
+					<!-- <div class="mel-scroll-help"><div id="mel7b" class="mel-scroll"></div></div> -->
+					<!-- <div class="mel-scroll-help"><div id="mel8b" class="mel-scroll"></div></div> -->
 				</div>
-				<!-- <div class="mel-scroll-help"><div id="mel7" class="mel-scroll"><img src="url"><div class="mel-scroll-content">texte</div></div></div> -->
-				<!-- <div class="mel-scroll-help"><div id="mel8" class="mel-scroll"><img src="url"><div class="mel-scroll-content">texte</div></div></div> -->
-				
-				<!-- clones -->
-				<div class="mel-scroll-help">
-					<div id="mel1b" class="mel-scroll"></div>
-				</div>
-				<div class="mel-scroll-help">
-					<div id="mel2b" class="mel-scroll"></div>
-				</div>
-				<div class="mel-scroll-help">
-					<div id="mel3b" class="mel-scroll"></div>
-				</div>
-				<div class="mel-scroll-help">
-					<div id="mel4b" class="mel-scroll"></div>
-				</div>
-				<div class="mel-scroll-help">
-					<div id="mel5b" class="mel-scroll"></div>
-				</div>
-				<div class="mel-scroll-help">
-					<div id="mel6b" class="mel-scroll"></div>
-				</div>
-				<!-- <div class="mel-scroll-help"><div id="mel7b" class="mel-scroll"></div></div> -->
-				<!-- <div class="mel-scroll-help"><div id="mel8b" class="mel-scroll"></div></div> -->
 			</div>
 		</div>
 	
@@ -165,15 +167,18 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="../bootstrap/js/bootstrap.js"></script>
 	<script>
-		var melvar = 1;
-		function melboxes() {
-			$('#mel'+ melvar +'b').html($('#mel'+ melvar).html());
-			melvar = melvar +1;
-		} 
-		//plutôt que de faire une ligne pour chaque id (mel1 et mel1b puis mel2 et mel2b etc.)...
-		for (i=0;i<=6;i++) {
-			melboxes();
-		} 
-		//...on repète la fonction le nombre de fois nécessaires (nombre de divs à cloner)
+		//pour que #mel-scroll-container commence scrollé au milieu (à peu près)
+		var scrollset;
+		if (window.innerWidth <= 550) scrollset = 317;
+		else if (window.innerWidth <= 768) scrollset = 257;
+		else if (window.innerWidth <= 975) scrollset = 227;
+		else scrollset = 80;
+		$(document).ready(function melmilieu(){
+		$("div#mel-scroll-container").scrollLeft(scrollset);
+		});
+		//pour éviter de faire une ligne pour chaque id (pour mel1 et mel1b puis pour mel2 et mel2b etc.)
+		for (i=1;i<=6;i++) {
+			$('#mel'+ i +'b').html($('#mel'+ i).html());
+		}
 	</script>
 </html>
