test android chrome 2

--- a/pages/melanges.html
+++ b/pages/melanges.html
@@ -74,8 +74,10 @@
 		<!--Contenu de la page -->
 
 		<div class="container page">
-			<div id='disco' style="overflow-x:hidden"></div>
-			<div id='disco2' style="overflow-x:hidden"></div>
+			<div style="max-width=100%; overflow-x:hidden">
+				<div id='disco'></div>
+				<div id='disco2'></div>
+			</div>
 			<h1>
 				<center>Une infinité de possibilités...</center>
 			</h1>			
