test 4 + instructions alternatives (touchez/survolez) dans melanges.html

--- a/pages/melanges.html
+++ b/pages/melanges.html
@@ -74,8 +74,6 @@
 		<!--Contenu de la page -->
 
 		<div class="container page">
-			<div id='disco'></div>
-			<div id='disco2'></div>
 			<h1>
 				<center>Une infinité de possibilités...</center>
 			</h1>			
@@ -86,7 +84,7 @@
 				</div>
 			</div>
 			<br>		
-			<div class="alert alert-success"><center>Survolez une image avec votre souris</center></div>
+			<div class="alert alert-success"><center><span class="mel-instr-mob1"></span> une image avec votre <span class="mel-instr-mob2"></span></center></div>
 			<br>
 			<div id="mel-scroll-container">
 				<div id="mel-scroll-mobile">
@@ -161,7 +159,10 @@
 				<br/>Tous droits réservés aux créateurs originels.
 			</div>
 		</footer>
-	
+		<div style="width:100%; overflow:hidden">
+			<span id='disco'></span>
+			<span id='disco2'></span>
+		</div>
 	</body>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
